@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-12T16:10:43Z",
-  "count_outdated" : 4743,
-  "uniques_outdated" : 1358,
+  "timestamp" : "2023-07-13T00:54:22Z",
+  "count_outdated" : 4777,
+  "uniques_outdated" : 1377,
   "count" : 4819,
   "uniques" : 1404,
   "clones" : [
-    {
-      "timestamp": "2023-06-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 34 ],
-      "count_decinc": [ 33, 34 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 19 ],
-      "uniques_decinc": [ 18, 19 ]
-    },
     {
       "timestamp": "2023-06-29T00:00:00Z",
       "count": 3,
