@@ -1,12 +1,7 @@
 {
-  "count": 43,
+  "count": 42,
   "uniques": 20,
   "clones": [
-    {
-      "timestamp": "2023-06-28T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-06-29T00:00:00Z",
       "count": 3,
